# oled-display

./: .envrc  .gitignore  README.md  default.nix  flake.nix
arduino/: .gitignore  LICENSE  Makefile  default.nix
arduino/src/: main.ino
control/: .envrc  CHANGELOG.md  LICENSE  default.nix  display-control.cabal  display-control.nix  hie.yaml
control/app/: Main.hs
control/src/Display/: Arduino.hs  DBus.hs  HTTP.hs  Message.hs  Timer.hs
nix/: sources.json
