cabal-version:      2.2

--------------------------------------------------------------------------------
name:               display-control
version:            0.1.2.0
synopsis:           Control an OLED display connected to an Arduino
license:            BSD-2-Clause
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) 2019,2020 Peter Jones

--------------------------------------------------------------------------------
extra-source-files: CHANGELOG.md

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , aeson                 >=1.3  && <1.6
    , async                 ^>=2.2
    , base                  >=4.9  && <5.0
    , bytestring            >=0.10 && <0.12
    , dbus                  ^>=1.2
    , directory             ^>=1.3
    , filepath              ^>=1.4
    , lens                  >=4.0  && <5.1
    , monad-stm             ^>=0.1
    , mtl                   ^>=2.2
    , network               ^>=3.1
    , optparse-applicative  ^>=0.16
    , relude                ^>=1.0
    , safe-exceptions       ^>=0.1
    , serialport            ^>=0.5
    , servant               >=0.15 && <0.19
    , servant-server        >=0.15 && <0.19
    , signal                ^>=0.1
    , stm                   ^>=2.5
    , text                  ^>=1.2
    , time                  >=1.9  && <1.12
    , warp                  >=3.2  && <3.4

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

--------------------------------------------------------------------------------
library
  import:          options, dependencies
  hs-source-dirs:  src
  exposed-modules:
    Display.Arduino
    Display.DBus
    Display.HTTP
    Display.Message
    Display.Timer

--------------------------------------------------------------------------------
executable display-control
  import:         options, dependencies
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:  display-control
